--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
     <div class="product-grid">
       <div class="product-card" onclick="addToCart('Winter White onesie for dogs')">
-        <img src= "C:\Users\Chenesani\Downloads\WMD\Winter White coat.png" alt="Winter White onesie for dogs" />
+        <img src= "Winter White coat.png" alt="Winter White onesie for dogs" />
         <p class="product-name">Winter White Onesie for Dogs</p>
         <p class="price">BWP 270.00</p>
       </div>
@@ -45,37 +45,37 @@
       </div>
 
       <div class="product-card" onclick="addToCart('Mint Turtle Neck Sweater for Cats and Dogs')">
-        <img src="C:\Users\Chenesani\Downloads\WMD\Mint turtle neck sweater for cats and dogs.png" alt="Mint Turtle Neck Sweater" />
+        <img src="Mint turtle neck sweater for cats and dogs.png" alt="Mint Turtle Neck Sweater" />
         <p class="product-name">Mint Turtle Neck Sweater for Cats and Dogs</p>
         <p class="price">BWP 160.00</p>
       </div>
 
       <div class="product-card" onclick="addToCart('Hand Knit Sweater for Dogs')">
-        <img src="C:\Users\Chenesani\Downloads\WMD\Hand Knit Sweater for Dogs.png" alt="Hand Knit Sweater for Dogs" />
+        <img src="Hand Knit Sweater for Dogs.png" alt="Hand Knit Sweater for Dogs" />
         <p class="product-name">Hand Knit Sweater for Dogs</p>
         <p class="price">BWP 160.00</p>
       </div>
 
       <div class="product-card" onclick="addToCart('Denim and Khaki Dog Jacket')">
-        <img src="C:\Users\Chenesani\Downloads\WMD\Denim and khaki dog Jacket.png" alt="Denim and Khaki Dog Jacket" />
+        <img src="Denim and khaki dog Jacket.png" alt="Denim and Khaki Dog Jacket" />
         <p class="product-name">Denim and Khaki Dog Jacket</p>
         <p class="price">BWP 450.00</p>
       </div>
 
       <div class="product-card" onclick="addToCart('Diamond Knit Alpaca Dog Sweater')">
-        <img src="C:\Users\Chenesani\Downloads\WMD\Diamond knit Alpaca Dog Sweater.png" alt="Diamond Knit Alpaca Dog Sweater" />
+        <img src="Diamond knit Alpaca Dog Sweater.png" alt="Diamond Knit Alpaca Dog Sweater" />
         <p class="product-name">Diamond Knit Alpaca Dog Sweater</p>
         <p class="price">BWP 240.00</p>
       </div>
 
       <div class="product-card" onclick="addToCart('Turtle Teddy Dog Fleece')">
-        <img src="C:\Users\Chenesani\Downloads\WMD\Turtle Teddy dog Fleece.png" alt="Turtle Teddy Dog Fleece" />
+        <img src="Turtle Teddy dog Fleece.png" alt="Turtle Teddy Dog Fleece" />
         <p class="product-name">Turtle Teddy Dog Fleece</p>
         <p class="price">BWP 220.00</p>
       </div>
 
       <div class="product-card" onclick="addToCart('Puppia Dog Puffer')">
-        <img src="C:\Users\Chenesani\Downloads\WMD\Puppia harness.png" alt="Puppia Dog Puffer" />
+        <img src="Puppia harness.png" alt="Puppia Dog Puffer" />
         <p class="product-name">Puppia Dog Puffer</p>
         <p class="price">BWP 200.00</p>
       </div>
