--- a/Wear 3.html
+++ b/Wear 3.html
@@ -31,42 +31,42 @@
    </p> 
     <div class="product-grid">
       <div class="product-card" onclick="addToCart('The Worthy Dog bucket hat ', 320, 'https://via.placeholder.com/250', 'M', 1)">
-        <img src= "C:\Users\Chenesani\Downloads\WMD\The Worthy Dog bucket hat.png" alt="The Worthy Dog bucket hat" />
+        <img src= "The Worthy Dog bucket hat.png" alt="The Worthy Dog bucket hat" />
         <p class="product-name"> The Worthy Dog bucket hat </p>
         <p class="price">BWP 70.00</p>
       </div>
 	  <div class="product-card" onclick="addToCart('The Worthy Dog pinstripe shirt', 320, 'https://via.placeholder.com/250', 'M', 1)">
-        <img src= "C:\Users\Chenesani\Downloads\WMD\The Worthy Dog pinstripe shirt.png" alt="The Worthy Dog pinstripe shirt" />
+        <img src= "The Worthy Dog pinstripe shirt.png" alt="The Worthy Dog pinstripe shirt" />
         <p class="product-name">The Worthy Dog pinstripe shirt</p>
         <p class="price">BWP 100.00</p>
       </div>
 	  <div class="product-card" onclick="addToCart('Here Comes the Sun Dog Bandana', 320, 'https://via.placeholder.com/250', 'M', 1)">
-        <img src= "C:\Users\Chenesani\Downloads\WMD\Here comes the sun dog bandana.png" alt="Here Comes the Sun Dog Bandana" />
+        <img src= "Here comes the sun dog bandana.png" alt="Here Comes the Sun Dog Bandana" />
         <p class="product-name">Here Comes the sun dog bandana</p>
         <p class="price">BWP 60.00</p>
       </div>
 	  <div class="product-card" onclick="addToCart(' Catch of the Day Bandana ', 320, 'https://via.placeholder.com/250', 'M', 1)">
-        <img src= "C:\Users\Chenesani\Downloads\WMD\Catch of the Day Bandana.png" alt=" Catch of the Day Bandana " />
+        <img src= "Catch of the Day Bandana.png" alt=" Catch of the Day Bandana " />
         <p class="product-name">Catch of the Day Bandana  </p>
         <p class="price">BWP 60.00</p>
       </div>
 	  <div class="product-card" onclick="addToCart('The Foggy Dog berry bow tie ', 320, 'https://via.placeholder.com/250', 'M', 1)">
-        <img src= "C:\Users\Chenesani\Downloads\WMD\The Foggy Dog berry bow tie.png" alt=" The Foggy Dog berry bow tie " />
+        <img src= "The Foggy Dog berry bow tie.png" alt=" The Foggy Dog berry bow tie " />
         <p class="product-name"> The Foggy Dog berry bow tie </p>
         <p class="price">BWP 50.00</p>
       </div>
       <div class="product-card" onclick="addToCart('Sun Shield in Pink ', 320, 'https://via.placeholder.com/250', 'M', 1)">
-        <img src="C:\Users\Chenesani\Downloads\WMD\Sun Shield Tee in Pink.png"  alt="Sun Shield in Pink  " />
+        <img src="Sun Shield Tee in Pink.png"  alt="Sun Shield in Pink  " />
         <p class="product-name">Sun Shield in Pink</p>
         <p class="price">BWP 220.00</p>
       </div>
 	   <div class="product-card" onclick="addToCart(' ColorBlock Dog Hoodie Pink+Mink ', 320, 'https://via.placeholder.com/250', 'M', 1)">
-        <img src= "C:\Users\Chenesani\Downloads\WMD\Colorblock Dog Hoodie.png" alt=" ColorBlock Dog Hoodie Pink+Mink " />
+        <img src= "Colorblock Dog Hoodie.png" alt=" ColorBlock Dog Hoodie Pink+Mink " />
         <p class="product-name">ColorBlock Dog Hoodie Pink+Mink</p>
         <p class="price">BWP 320.00</p>
       </div>
       <div class="product-card" onclick="addToCart('Hop To It Graphic Dog T-Shirt', 320, 'https://via.placeholder.com/250', 'M', 1)">
-        <img src= "C:\Users\Chenesani\Downloads\WMD\I hate it here graphic-tee.png" alt="I Hate It Here Graphic Dog T-Shirt" />
+        <img src= "I hate it here graphic-tee.png" alt="I Hate It Here Graphic Dog T-Shirt" />
         <p class="product-name">I Hate it Here Graphic Dog T-Shirt</p>
         <p class="price">BWP 200.00</p>
       </div>
@@ -79,7 +79,7 @@
         <h3 style="border-bottom: 1px solid #fff; padding-bottom: 0.5em;">ABOUT & CONTACT</h3>
         <ul style="list-style: none; padding: 0;">
           <li><a href="About us.html" style="color:white;">Who We Are</a></li>
-          <li><a href="#" style="color:white;">Contact Us</a></li>
+          <li><a href="Contact us.html" style="color:white;">Contact Us</a></li>
         </ul>
       </div>
       <div style="margin: 1em;">
