--- a/Walk 3.html
+++ b/Walk 3.html
@@ -31,42 +31,42 @@
    </p> 
     <div class="product-grid">
       <div class="product-card" onclick="addToCart('Hydro leash and collar in sky blue', 320, 'https://via.placeholder.com/250', 'M', 1)">
-        <img src= "C:\Users\Chenesani\Downloads\WMD\Hydro leash and collar in sky blue.png" alt=" Hydro leash and collar in sky blue " />
+        <img src= "Hydro leash and collar in sky blue.png" alt=" Hydro leash and collar in sky blue " />
         <p class="product-name"> Hydro leash and collar in sky blue </p>
         <p class="price">BWP 320.00</p>
       </div>
 	  <div class="product-card" onclick="addToCart(' Hydro leash and collar in yellow ', 320, 'https://via.placeholder.com/250', 'M', 1)">
-        <img src= "C:\Users\Chenesani\Downloads\WMD\Hydro leash and collar.png" alt=" Hydro leash and collar in yellow " />
+        <img src= "Hydro leash and collar.png" alt=" Hydro leash and collar in yellow " />
         <p class="product-name"> Hydro leash and collar in yellow</p>
         <p class="price">BWP 320.00</p>
       </div>
 	  <div class="product-card" onclick="addToCart(' Velvet leash and collar in primrose ', 320, 'https://via.placeholder.com/250', 'M', 1)">
-        <img src= "C:\Users\Chenesani\Downloads\WMD\primrose leash and collar set.png" alt=" Velvet leash and collar in primrose " />
+        <img src= "primrose leash and collar set.png" alt=" Velvet leash and collar in primrose " />
         <p class="product-name">Velvet leash and collar in primrose</p>
         <p class="price">BWP 320.00</p>
       </div>
 	  <div class="product-card" onclick="addToCart(' Waste bag holder ', 320, 'https://via.placeholder.com/250', 'M', 1)">
-        <img src= "C:\Users\Chenesani\Downloads\WMD\Waste bag holder.png" alt=" Waste bag holder " />
+        <img src= "Waste bag holder.png" alt=" Waste bag holder " />
         <p class="product-name">Waste bag holder </p>
         <p class="price">BWP 180.00</p>
       </div>
 	  <div class="product-card" onclick="addToCart('Cat and Mouse collar  ', 320, 'https://via.placeholder.com/250', 'M', 1)">
-        <img src= "C:\Users\Chenesani\Downloads\WMD\cat collar.png" alt=" Cat and Mouse collar " />
+        <img src= "cat collar.png" alt=" Cat and Mouse collar " />
         <p class="product-name">Cat and Mouse collar</p>
         <p class="price">BWP 50.00</p>
       </div>
       <div class="product-card" onclick="addToCart('Earth Rated poop bags ', 320, 'https://via.placeholder.com/250', 'M', 1)">
-        <img src= "C:\Users\Chenesani\Downloads\WMD\poop bags.png" alt=" Earth Rated poop bags " />
+        <img src= "poop bags.png" alt=" Earth Rated poop bags " />
         <p class="product-name">Earth Rated poop bags</p>
         <p class="price">BWP 70.00</p>
       </div>
 	  <div class="product-card" onclick="addToCart('Puppia harness in black  ', 320, 'https://via.placeholder.com/250', 'M', 1)">
-        <img src= "C:\Users\Chenesani\Downloads\WMD\Puppia harness.png" alt=" Puppia harness " />
+        <img src= "Puppia harness.png" alt=" Puppia harness " />
         <p class="product-name"> Puppia harness in black </p>
         <p class="price">BWP 320.00</p>
       </div>
 	  <div class="product-card" onclick="addToCart('The Foggy Dog Tulip collar  ', 320, 'https://via.placeholder.com/250', 'M', 1)">
-        <img src= "C:\Users\Chenesani\Downloads\WMD\The Foggy Dog Tulip collar.png" alt=" The Foggy Dog Tulip collar " />
+        <img src= "The Foggy Dog Tulip collar.png" alt=" The Foggy Dog Tulip collar " />
         <p class="product-name">The Foggy Dog Tulip collar  </p>
         <p class="price">BWP 100.00</p>
       </div>
