--- a/Sale 3.html
+++ b/Sale 3.html
@@ -31,22 +31,22 @@
    </p> 
     <div class="product-grid">
       <div class="product-card" onclick="addToCart('Hot Dog! plush dog ', 320, 'https://via.placeholder.com/250', 'M', 1)">
-        <img src= "C:\Users\Chenesani\Downloads\WMD\Hot Dog! plush dog on sale.png" alt="Hot Dog! plush dog " />
+        <img src= "Hot Dog! plush dog on sale.png" alt="Hot Dog! plush dog " />
         <p class="product-name">Hot Dog! plush dog </p>
         <p class="price">BWP 20.00</p>
       </div>
 	  <div class="product-card" onclick="addToCart('Tennis ball pack', 320, 'https://via.placeholder.com/250', 'M', 1)">
-        <img src= "C:\Users\Chenesani\Downloads\WMD\For sale tennis balls.png" alt="Tennis ball pack" />
+        <img src= "For sale tennis balls.png" alt="Tennis ball pack" />
         <p class="product-name">Tennis ball pack</p>
         <p class="price">BWP 20.00</p>
       </div>
 	  <div class="product-card" onclick="addToCart('Piggy Smalls Squeaky Plush dog toy', 320, 'https://via.placeholder.com/250', 'M', 1)">
-        <img src= "C:\Users\Chenesani\Downloads\WMD\Piggy Smalls Squeaky Plush dog toy.png" alt="Piggy Smalls Squeaky Plush dog toy" />
+        <img src= "Piggy Smalls Squeaky Plush dog toy.png" alt="Piggy Smalls Squeaky Plush dog toy" />
         <p class="product-name">Piggy Smalls Squeaky Plush dog toy</p>
         <p class="price">BWP 30.00</p>
       </div>
 	 	  <div class="product-card" onclick="addToCart('Dino dog toy', 320, 'https://via.placeholder.com/250', 'M', 1)">
-        <img src="C:\Users\Chenesani\Downloads\WMD\Dino dog toy.png"alt="Dino dog toy" />
+        <img src="Dino dog toy.png"alt="Dino dog toy" />
         <p class="product-name">Dino dog toy</p>
         <p class="price">BWP 50.00</p>
       </div> 
