--- a/Play 3.html
+++ b/Play 3.html
@@ -31,42 +31,42 @@
    </p>
     <div class="product-grid">
       <div class="product-card" onclick="addToCart('Knit Banana dog toy ', 320, 'https://via.placeholder.com/250', 'M', 1)">
-        <img src= "C:\Users\Chenesani\Downloads\WMD\Knit Banana dog toy.png" alt=" Knit Banana dog toy " />
+        <img src= "Knit Banana dog toy.png" alt=" Knit Banana dog toy " />
         <p class="product-name">Knit Banana dog toy  </p>
         <p class="price">BWP 50.00</p>
       </div>
 	  <div class="product-card" onclick="addToCart(' Sassy sunflower squeaker toy ', 320, 'https://via.placeholder.com/250', 'M', 1)">
-        <img src= "C:\Users\Chenesani\Downloads\WMD\Sassy sunflower squeaker toy.png" alt="Sassy sunflower squeaker toy  " />
+        <img src= "Sassy sunflower squeaker toy.png" alt="Sassy sunflower squeaker toy  " />
         <p class="product-name"> Sassy sunflower squeaker toy </p>
         <p class="price">BWP 70.00</p>
       </div>
 	  <div class="product-card" onclick="addToCart(' Zebra Organic toy ', 320, 'https://via.placeholder.com/250', 'M', 1)">
-        <img src= "C:\Users\Chenesani\Downloads\WMD\Zebra Organic toy.png" alt=" Zebra Organic toy " />
+        <img src= "Zebra Organic toy.png" alt=" Zebra Organic toy " />
         <p class="product-name">Zebra Organic toy  </p>
         <p class="price">BWP 90.00</p>
       </div>
 	  <div class="product-card" onclick="addToCart('Hamburger interactive toy', 320, 'https://via.placeholder.com/250', 'M', 1)">
-        <img src= "C:\Users\Chenesani\OneDrive\Desktop\Hamburger interactive toy.webp" alt="Hamburger interactive toy" />
+        <img src= "Hamburger interactive toy.webp" alt="Hamburger interactive toy" />
         <p class="product-name">Hamburger interactive toy</p>
         <p class="price">BWP 120.00</p>
       </div>
 	  <div class="product-card" onclick="addToCart('Sprinkle tennis ball pack', 320, 'https://via.placeholder.com/250', 'M', 1)">
-        <img src= "C:\Users\Chenesani\Downloads\WMD\Sprinkle tennis ball.png" alt="Sprinkle tennis ball pack" />
+        <img src= "Sprinkle tennis ball.png" alt="Sprinkle tennis ball pack" />
         <p class="product-name">Sprinkle tennis ball pack</p>
         <p class="price">BWP 120.00</p>
       </div>
       <div class="product-card" onclick="addToCart('Pawda handbag dog plush', 320, 'https://via.placeholder.com/250', 'M', 1)">
-        <img src= "C:\Users\Chenesani\Downloads\WMD\Pawda handbag dog plush.png" alt="Pawda handbag dog plush" />
+        <img src= "Pawda handbag dog plush.png" alt="Pawda handbag dog plush" />
         <p class="product-name">Pawda handbag dog plush</p>
         <p class="price">BWP 320.00</p>
       </div>
 	  <div class="product-card" onclick="addToCart('Taxi plush crinkle dog toy', 320, 'https://via.placeholder.com/250', 'M', 1)">
-        <img src="C:\Users\Chenesani\Downloads\WMD\Taxi plush crinkle dog toy.png"  alt="Taxi plush crinkle dog toy" />
+        <img src="Taxi plush crinkle dog toy.png"  alt="Taxi plush crinkle dog toy" />
         <p class="product-name">Taxi plush crinkle dog toy</p>
         <p class="price">BWP 320.00</p>
       </div>
 	  <div class="product-card" onclick="addToCart('Pull My Finger Catnip Toy', 320, 'https://via.placeholder.com/250', 'M', 1)">
-        <img src= "C:\Users\Chenesani\Downloads\WMD\Pull My Finger Catnip Toy.png" alt="Pull My Finger Catnip Toy" />
+        <img src= "Pull My Finger Catnip Toy.png" alt="Pull My Finger Catnip Toy" />
         <p class="product-name">Pull My Finger Catnip Toy</p>
         <p class="price">BWP 320.00</p>
       </div>
@@ -79,7 +79,7 @@
         <h3 style="border-bottom: 1px solid #fff; padding-bottom: 0.5em;">ABOUT & CONTACT</h3>
         <ul style="list-style: none; padding: 0;">
           <li><a href="About us.html" style="color:white;">Who We Are</a></li>
-          <li><a href="#" style="color:white;">Contact Us</a></li>
+          <li><a href="Contact us.html" style="color:white;">Contact Us</a></li>
         </ul>
       </div>
       <div style="margin: 1em;">
