--- a/Eat 3.html
+++ b/Eat 3.html
@@ -31,42 +31,42 @@
    </p>
     <div class="product-grid">
       <div class="product-card" onclick="addToCart('Ceramic Dog Plates', 320, 'https: C:\Users\Chenesani\Downloads\WMD\Dog plates.png ', 1)">
-        <img src= "C:\Users\Chenesani\Downloads\WMD\Dog plates.png" alt=" Ceramic Dog Plates " />
+        <img src= "Dog plates.png" alt=" Ceramic Dog Plates " />
         <p class="product-name">Ceramic Dog Plates</p>
         <p class="price">BWP 190.00</p>
       </div>
 	  <div class="product-card" onclick="addToCart(' Wild One Dog Bowls ', 320, 'https://via.placeholder.com/250', 'M', 1)">
-        <img src= "C:\Users\Chenesani\Downloads\WMD\Wild One Dog Bowl.png" alt=" Wild One Dog Bowls " />
+        <img src= "Wild One Dog Bowl.png" alt=" Wild One Dog Bowls " />
         <p class="product-name">Wild One Dog Bowls</p>
         <p class="price">BWP 300.00</p>
       </div>
 	  <div class="product-card" onclick="addToCart(' Solid Double Feeder ', 320, 'https://via.placeholder.com/250', 'M', 1)">
-        <img src= "C:\Users\Chenesani\Downloads\WMD\Solid Double Feeder.png" alt=" Solid Double Feeder " />
+        <img src= "Solid Double Feeder.png" alt=" Solid Double Feeder " />
         <p class="product-name">Solid Double Feeder</p>
         <p class="price">BWP 360.00</p>
       </div>
 	  <div class="product-card" onclick="addToCart(' Soda Pup slow feeder ', 320, 'https://via.placeholder.com/250', 'M', 1)">
-        <img src= "C:\Users\Chenesani\Downloads\WMD\Soda Pup slow feeder.png" alt=" Soda Pup slow feeder " />
+        <img src= "Soda Pup slow feeder.png" alt=" Soda Pup slow feeder " />
         <p class="product-name">Soda Pup slow feeder</p>
         <p class="price">BWP 90.00</p>
       </div>
 	  <div class="product-card" onclick="addToCart(' Bundle & Joy Travel Bowls Pack ', 320, 'https://via.placeholder.com/250', 'M', 1)">
-        <img src= "C:\Users\Chenesani\Downloads\WMD\Bundle & Joy silicone bowls.png" alt="Bundle & Joy Travel Bowls Pack  " />
+        <img src= "Bundle & Joy silicone bowls.png" alt="Bundle & Joy Travel Bowls Pack  " />
         <p class="product-name">Bundle & Joy Travel Bowls Pack</p>
         <p class="price">BWP 250.00</p>
       </div>
       <div class="product-card" onclick="addToCart('Hop To It Graphic Dog T-Shirt', 320, 'https://via.placeholder.com/250', 'M', 1)">
-        <img src= "C:\Users\Chenesani\Downloads\WMD\Tilted Barn Jerky Dog Treats.png" alt="Hop To It Graphic Dog T-Shirt" />
+        <img src= "Tilted Barn Jerky Dog Treats.png" alt="Hop To It Graphic Dog T-Shirt" />
         <p class="product-name">Tiled Barn Jerky Dog Treats</p>
         <p class="price">BWP 90.00</p>
       </div>
 	  <div class="product-card" onclick="addToCart(' Tiled Barn Jerky Dog Treats ', 320, 'https://via.placeholder.com/250', 'M', 1)">
-        <img src= "C:\Users\Chenesani\Downloads\WMD\Fera colagen food topper.png" alt="Tiled Barn Jerky Dog Treats  " />
+        <img src= "Fera colagen food topper.png" alt="Tiled Barn Jerky Dog Treats  " />
         <p class="product-name">Hop To It Graphic Dog T-Shirt</p>
         <p class="price">BWP 320.00</p>
       </div>
 	    <div class="product-card" onclick="addToCart(' Foraging Mat For Dogs ', 320, 'https://via.placeholder.com/250', 'M', 1)">
-        <img src= "C:\Users\Chenesani\Downloads\WMD\Foraging Mat For Dogs.png" alt=" Foraging Mat For Dogs " />
+        <img src= "Foraging Mat For Dogs.png" alt=" Foraging Mat For Dogs " />
         <p class="product-name">Foraging Mat For Dogs</p>
         <p class="price">BWP 150.00</p>
       </div>
@@ -79,7 +79,7 @@
         <h3 style="border-bottom: 1px solid #fff; padding-bottom: 0.5em;">ABOUT & CONTACT</h3>
         <ul style="list-style: none; padding: 0;">
           <li><a href="About us.html" style="color:white;">Who We Are</a></li>
-          <li><a href="#" style="color:white;">Contact Us</a></li>
+          <li><a href="Contact us.hmtl" style="color:white;">Contact Us</a></li>
         </ul>
       </div>
       <div style="margin: 1em;">
