--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
       </div>
 
       <div class="product-card" onclick="addToCart('Winter Booties')">
-        <img src="C:\Users\Chenesani\Downloads\WMD\Winter Booties.png" alt="Winter Booties" />
+        <img src="Winter Booties.png" alt="Winter Booties" />
         <p class="product-name">Winter Booties</p>
         <p class="price">BWP 100.00</p>
       </div>
