--- a/Play 3.html
+++ b/Play 3.html
@@ -46,7 +46,7 @@
         <p class="price">BWP 90.00</p>
       </div>
 	  <div class="product-card" onclick="addToCart('Hamburger interactive toy', 320, 'https://via.placeholder.com/250', 'M', 1)">
-        <img src= "Hamburger interactive toy.webp" alt="Hamburger interactive toy" />
+        <img src= "Hamburger toy.png" alt="Hamburger interactive toy" />
         <p class="product-name">Hamburger interactive toy</p>
         <p class="price">BWP 120.00</p>
       </div>
