--- a/index.html
+++ b/index.html
@@ -87,8 +87,8 @@
       <div style="margin: 1em;">
         <h3 style="border-bottom: 1px solid #fff; padding-bottom: 0.5em;">ABOUT & CONTACT</h3>
         <ul style="list-style: none; padding: 0;">
-          <li><a href="About us.html" style="color:white;">Who We Are</a></li>
-          <li><a href="#" style="color:white;">Contact Us</a></li>
+          <li><a href="About us .html" style="color:white;">Who We Are</a></li>
+          <li><a href="Contact us.html" style="color:white;">Contact Us</a></li>
         </ul>
       </div>
       <div style="margin: 1em;">
