--- a/index.html
+++ b/index.html
@@ -102,8 +102,8 @@
       <div style="margin: 1em;">
         <h3 style="border-bottom: 1px solid #fff; padding-bottom: 0.5em;">FOLLOW US</h3>
         <ul style="list-style: none; padding: 0;">
-          <li><a href="#" style="color:white;">Facebook</a></li>
-          <li><a href="#" style="color:white;">Instagram</a></li>
+          <li><a href=" https://www.facebook.com/ " style="color:white;">Facebook</a></li>
+          <li><a href=" https://www.instagram.com/  " style="color:white;">Instagram</a></li>
         </ul>
       </div>
     </div>
