Update About us .html

--- a/About us .html
+++ b/About us .html
@@ -29,7 +29,7 @@
       At <strong>Pet Parents</strong>, we believe pets are family. Since 2024, we’ve made it our mission to provide a curated collection of quality pet essentials that combine function, comfort, and personal style.
     </p>
     <p>
-      Headquartered in Gaborone, Botswana, our shop was founded out of a deep love for animals and a passion for beautifully crafted pet products. Whether you're shopping online or visiting our store, we strive to make your experience seamless and enjoyable.
+      Headquartered in Gaborone, Botswana, our shop was founded out of a deep love for animals and a passion for beautifully crafted pet products.We strive to make your online shopping experience seamless and enjoyable.
     </p>
     <p>
       We specialize in products made by independent designers — collars, leashes, beds, bowls, toys, and more — all chosen for their thoughtful design, durability, and charm.
